# escape-artist-agent

./: .gitattributes  .gitignore  Makefile  README.md  __init__.py  demo.py  environment.yml  pyproject.toml  requirements.txt
agent/: importance_sampling.py  monte_carlo.py  policies.py
assets/: README.md  ablations_mc_q.csv  eval_demo.csv  eval_demo.md  eval_easy.csv  eval_easy.md  eval_medium.csv  eval_medium.md  eval_medium_long.csv  eval_medium_long.md  eval_medium_xlong.csv  eval_medium_xlong.md
configs/: easy.yaml  hard.yaml  medium.yaml
docs/: CLI_walkthrough.md  DEVELOPER_GUIDE.md  Portfolio_PPTX.pptx  code_tour.md
environment/: escape_env.py  utils.py
environment/maps/: map1.txt  map2.json
escape_artist/algos/: __init__.py  mc_control.py  mc_offpolicy.py  q_learning.py
escape_artist/envs/: __init__.py  escape_env.py  escape_env_copy.py  generators.py  generators_copy.py
escape_artist/utils/: __init__.py  plotting.py
experiments/: ablations.py  analysis.ipynb  combine_curves.py  demo.py  evaluate.py  make_hero_gif.py  make_layout_montage.py  make_success_rollout.py  run_experiment.py  train_mc.py
logs/: q_table.pkl  training_log.csv
notebooks/: analysis.ipynb  q_heatmaps.ipynb
scripts/: generate_dependency_graph.py
tests/: test_env.py  test_generators.py  test_mc.py  test_q_learning.py
